# fireboltSampleApps

./: README.md  appmanagerregistry.conf
nativeApps/: Readme.md  build_samples.sh  run_partner_app.sh
nativeApps/aamp-player/: Makefile.am  aampplayer.cpp  aampplayer.h  configure.ac  main.cpp  main_aamp.cpp
nativeApps/graphics/: Makefile.am  configure.ac  rne-triangle.cpp
nativeApps/graphics-lifecycle/: LifeCycle.cpp  LifeCycle.h  Makefile.am  RtUtils.cpp  RtUtils.h  configure.ac  graphics-lifecycle.cpp
nativeApps/mse-player/: GstMSESrc.cpp  GstMSESrc.h  Makefile.am  configure.ac  glib_tools.cpp  glib_tools.h  main.cpp  mediasourcepipeline.cpp  mediasourcepipeline.h
nativeApps/mse-player/mse_frames/: README.txt  raw_audio_frames_0.txt  raw_audio_frames_1.txt  raw_audio_frames_2.txt  raw_video_frames_0.txt  raw_video_frames_1.txt  raw_video_frames_2.txt
nativeApps/player/: Makefile.am  configure.ac  rne-player.cpp
sparkApps/: Readme.md
sparkApps/rdkPlatformSpecificSamples/: rdkplayer.js
webApps/: Readme.md  helloWorld.html  video.html
